static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Chewy&family=Quicksand:wght@300..700&display=swap');


/*-------------------- Setup --------------------*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

main {
    /*Pushing footer to the page bottom*/
    flex: 1;
    display: flex;
    flex-direction: column;
}


/*-------------------- Colors--------------------*/

:root {
    /*Primary color*/
    --yellow: #FCC737;
    --orange: #dc3545;

    /*Secondary color*/
    --darkgrey: #2B2929;
    --lightgrey: #f3f0f0;
    --offwhite: #fafafa;
}

.orange {
    color: var(--orange) !important;
}

.offwhite {
    color: var(--offwhite) !important;
}

.darkgrey {
    color: var(--darkgrey) !important;
}


.bg-yellow {
    background-color: var(--yellow);
}

.bg-orange {
    background-color: var(--orange);
}

.bg-darkgrey {
    background-color: var(--darkgrey) !important;
}

.bg-lightgrey {
    background-color: var(--lightgrey) !important;
}

/*-------------------- Typo --------------------*/

h1 {
    font-family: "Chewy", serif;
    font-size: 5rem;
    font-weight: 400;
}

h2 {
    font-family: "Chewy", serif;
    font-size: 3.5rem;
    font-weight: 400;
}

h3,
.h3-etapes {
    font-family: "Chewy", serif;
    font-size: 2.5rem;
    font-weight: 400;
}

.h3-grpd,
.h3-cgv {
    font-size: 1.5rem !important;
}

.font {
    font-family: "Quicksand", serif;
    font-weight: bold;
}

p,
a,
.yellow-btn,
.orange-btn,
.submit-btn,
th,
li,
input,
legend,
label,
small {
    font-family: "Quicksand", serif;
    font-size: 1rem;
    font-weight: 400;
}

.bold {
    font-weight: 500;
    font-size: 1.1rem;
}


/*-------------------- Links & Button --------------------*/

.link:hover,
.yellow-btn:hover,
.orange-btn:hover,
.submit-btn:hover,
.black-paw,
a:hover {
    cursor: url('/static/images/pawcursor.webp') 10 10, auto;
}

.white-paw {
    cursor: url('/static/images/pawcursorwhite.webp') 10 10, auto !important;
}

.link {
    color: var(--orange);
}

.link:hover {
    color: var(--orange);
    font-weight: 500;
}

.yellow-btn {
    padding: 0.375rem 0.75rem;
    color: var(--darkgrey);
    background-color: var(--yellow);
    border: 1px solid var(--yellow);
    border-radius: 0.375rem;
    text-decoration: none;
    display: inline-block;
}

.yellow-btn:hover {
    color: var(--darkgrey);
    background-color: var(--offwhite);
}

.orange-btn {
    padding: 0.375rem 0.75rem;
    color: var(--offwhite);
    background-color: var(--orange);
    border: 1px solid var(--orange);
    border-radius: 0.375rem;
    text-decoration: none;
    display: inline-block;
}

.orange-btn:hover {
    color: var(--orange);
    background-color: var(--offwhite);
}

.submit-btn {
    padding: 0.375rem 0.75rem;
    color: var(--orange);
    background-color: var(--offwhite);
    border: 1px solid var(--orange);
    border-radius: 0.375rem;
    text-decoration: none;
}

.submit-btn:hover {
    color: var(--offwhite);
    background-color: var(--orange);
}

.no-text-decoration {
    text-decoration: none !important;
}

/*Background color of the selected category in the filters*/
.dropdown-item.active {
    background-color: var(--orange) !important;
    color: var(--offwhite) !important;
}


/*-------------------- Wrapper --------------------*/

.message-wrapper {
    padding: 1rem 2rem;
    border: 1px solid var(--orange) !important;
    border-radius: 20px;
    margin-bottom: 4rem;
}

.wrapping-border {
    display: inline-block;
    border: 1px solid var(--darkgrey);
    border-radius: 20px;
    padding: 0 1rem;
    margin-bottom: 0.5rem;
    width: auto;
}

/*One 1 line wrapper*/

.one-line {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}


/*-------------------- Header --------------------*/

.logo {
    width: 300px;
    height: auto;
}

.search-icon {
    height: 20px;
}

.reset-icon {
    height: 24px;
    width: 24px;
    color: var(--darkgrey);
}

#herosection {
    background-color: var(--yellow);
    width: 100%;
    height: auto;
    margin-bottom: 100px;
}

.relativeposition {
    position: relative;
}

.footprint {
    position: absolute;
    width: 150px;
    top: 25px;
}

.heropet {
    height: 400px;
    margin-top: 30px;
    margin-bottom: -60px;
}

.dropdown-item:active {
    background-color: transparent !important;
    color: inherit !important;
}

/*-------------------- Footer --------------------*/

footer {
    margin-top: 6rem;
    background-color: var(--yellow);
    /* height: 150px; */
    min-height: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}



.footercat {
    width: 300px;
    height: 300px;
    position: absolute;
    right: 50px;
    top: -218px;
}


/*-------------------- Cookies Banner --------------------*/


#cookie-banner {
    position: fixed;
    bottom: 0;
    width: 100%;
    background: var(--darkgrey);
    color: var(--offwhite);
    padding: 10px;
    display: none;
}


/*-------------------- Business List--------------------*/

.card {
    width: 100%;
    border: 1px solid var(--orange);
}

.orange-hr {
    color: var(--orange);
    width: 90%;
}

.image-wrapper {
    width: 106px;
    height: 106px;
    border: 3px solid var(--yellow);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
    margin: 0 auto 2rem auto;
}

.round-image {
    margin: 0;
    padding: 0;
    display: block;
    width: 94px;
    height: 94px;
    border-radius: 50%;
}

.title-color {
    color: var(--orange);
    font-size: 1.3rem;
}


/*-------------------- Business Detail--------------------*/

.spacing-up {
    margin-top: 3rem;
}

.picto {
    width: 25px;
    margin-right: 10px;
}

.right-move-up {
    display: flex;
    align-items: start;
}

.right-move {
    display: flex;
    align-items: center;
}

.rounded-corner {
    border-radius: 20px;
}

.like-wrapper {
    margin-top: 1rem;
}

/*-------------------- Business form--------------------*/

.spacing {
    margin-top: 4rem;
    margin-bottom: 2rem;
}

/*-------------------- Concept --------------------*/

.cartepasseport {
    width: 90%;
    height: auto;
    border-radius: 15px;
}

.illustration_services {
    width: 90%;
    height: auto;
    margin-bottom: 2rem;
    border-radius: 15px;
}

/*-------------------- 404--------------------*/

.dog-size {
    width: 300px;
    height: auto;
}


/*-------------------- Responsivness --------------------*/

@media screen and (max-width: 768px) {
    .btneffect {
        margin-top: 30px;
    }

    .footercat {
        width: 200px;
        height: 200px;
        position: absolute;
        right: 50px;
        top: -144px;
    }
}


@media screen and (max-width: 720px) {
    footer {
        min-height: 140px;

    }
}

@media screen and (max-width: 520px) {
    .hidden {
        display: none;
    }

    .footercat {
        display: none;
    }
}

@media screen and (max-width: 720px) {
    footer {
        min-height: 160px;
    }
}

@media screen and (max-width: 330px) {

    .btn-danger,
    .btn-warning {
        margin: 0.2rem 0rem;
    }

    .logo {
        width: 150px;
        height: auto;
    }
}

